# advent-of-code

./: .gitignore  README.md
2015/haskell/: haskell.cabal
2015/haskell/app/: Main.hs
2015/haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Utils.hs
2015/haskell/src/: Day01.hs
2015/lean/: Aoc2015.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
2015/lean/Solutions/: Day01.lean
2018/: readme.md
2018/Java/: README.md
2018/Java/day01/: Frequency.java  input.txt
2018/Java/day02/: Checksum.java  Match.java
2018/Java/day03/: Claim.java  Overlap.java
2018/Scala/: 1.scala
2019/: readme.md
2019/1/: scala.scala
2019/2/: scala.sc
2019/3/: scala.sc
2019/6/Scala/: part2.sc
2019/OCaml/day04/: ocaml.ml
2019/Python/: day22.py
2019/Scala/day01/: Day1.scala  Main.scala  worksheet1.sc
2019/Scala/day02/: Day2.scala  Main.scala  worksheet2.sc
2019/Scala/day03/: worksheet3.sc
2019/Scala/day05/: Day5.scala  Main.scala
2019/Scala/day05/opcode/: Action.scala  Jump.scala  OpCode.scala  OpCode1.scala  OpCode2.scala  OpCode3.scala  OpCode4.scala  OpCode5.scala  OpCode6.scala  OpCode7.scala  OpCode8.scala  OpCode99.scala
2019/Scala/day06/: Counter.scala  Day06.scala  Main.scala  Tree.scala
2019/Scala/day07/: Day07.scala  Main.scala
2019/Scala/day07/intcode/: Amplifier.scala  Solver.scala
2019/Scala/day07/intcode/opcode/: Action.scala  Input.scala  Jump.scala  OpCode.scala  OpCode1.scala  OpCode2.scala  OpCode3.scala  OpCode4.scala  OpCode5.scala  OpCode6.scala  OpCode7.scala  OpCode8.scala  OpCode99.scala  Output.scala
2019/Scala/day08/: codegolf_part1.sc  worksheet8.sc
2019/Scala/day09/: Day09.scala  Main.scala
2019/Scala/day09/intcode/: Machine.scala
2019/Scala/day09/intcode/opcode/: Action.scala  Input.scala  Jump.scala  OpCode.scala  OpCode1.scala  OpCode2.scala  OpCode3.scala  OpCode4.scala  OpCode5.scala  OpCode6.scala  OpCode7.scala  OpCode8.scala  OpCode9.scala  OpCode99.scala  Output.scala
2019/Scala/day10/: Day10.scala  Main.scala  Vector2.scala
2019/Scala/day11/: Day11.scala  Main.scala  Point.scala  Robot.scala
2019/Scala/day11/direction/: Direction.scala
2019/Scala/day12/: Day12.scala  Main.scala  Moon.scala
2019/Scala/day13/: Main.scala  worksheet13.sc
2019/Scala/intcode/: Machine.scala  MachineTest.scala  Main.scala  State.scala
2019/Scala/intcode/opcode/: Action.scala  Input.scala  Jump.scala  OpCode.scala  OpCode1.scala  OpCode2.scala  OpCode3.scala  OpCode4.scala  OpCode5.scala  OpCode6.scala  OpCode7.scala  OpCode8.scala  OpCode9.scala  OpCode99.scala  Output.scala
2019/Scala/intcode/testinputs/: input5.txt  input9.txt
2019/Scala/kamlib/: Reader.scala  Wrapper.scala
2019/day5/: Main.scala
2019/day5/opcode/: Action.scala  Jump.scala  OpCode.scala  OpCode1.scala  OpCode2.scala  OpCode3.scala  OpCode4.scala  OpCode5.scala  OpCode6.scala  OpCode7.scala  OpCode8.scala  OpCode99.scala
2019/haskell/: aoc2019.cabal
2019/haskell/app/: Main.hs
2019/haskell/solutions/: Advent.hs  Day01.hs  Day02.hs  Day05.hs
2020/: readme.md
2020/CSharp/Day08/: Program.cs
2020/Haskell/: day01.hs
2020/Python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2021/Python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
2021/rust/src/: utils.rs
2021/rust/src/solutions/: day01.rs  day02.rs
2022/haskell/: day01.hs
2022/rust/: Cargo.toml  README.md  template.rs
2022/rust/inputs/: day25.txt  scratch.txt
2022/rust/src/: main.rs  utils.rs
2022/rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2022/rust/src/utils/: matrix.rs
2023/haskell/: aoc2023.cabal
2023/haskell/app/: Main.hs  Utils.hs
2023/haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day15.hs  Day20.hs  Day24.hs  Misc.hs
2023/haskell/src/: Day01.hs  Day02.hs
2023/haskell/test/: Main.hs
2023/haskell/tests/: Main.hs
2024/.input/: 09
2024/haskell/: Makefile  aoc2024.cabal
2024/haskell/app/: Main.hs
2024/haskell/solutions/: Advent.hs  Day01.hs  Day02.hs  Day03.hs  Sample.hs
2024/rust/: Cargo.toml
2024/rust/src/: advent.rs  day01.rs  day02.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day11.rs  day12.rs  main.rs
2025/rust/: Cargo.toml
2025/rust/src/: day01.rs  day02.rs  day03.rs  day06.rs  day10.rs  main.rs
