cabal-version: 3.0
name: aoc2015
version: 0.1.0.0
synopsis: Advent of Code 2015 solutions
-- A longer description of the package.
-- description:
homepage:
-- A URL where users can report bugs.
-- bug-reports:
license: MIT
author: Maciej Jur
maintainer: maciej@kamoshi.org
-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05

  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base >=4.16.4.0,
    bytestring >=0.10.10.0,
    cryptohash-md5 >=0.11.101.0,
    text >=2.1.1,

  hs-source-dirs: solutions
  default-language: Haskell2010

executable haskell
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    aoc2015,
    base >=4.16.4.0,
    text >=2.1.1,

  hs-source-dirs: app
  default-language: Haskell2010
