cabal-version: 3.0

name:          aoc2023
version:       0.0.1
synopsis:      Solutions to Advent of Code 2023
license:       MIT
author:        Maciej Jur
maintainer:    maciej@kamoshi.org
build-type:    Simple


common warnings
  ghc-options: -Wall

library
  import: warnings

  hs-source-dirs: solutions

  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09

  -- other-modules:

  -- other-extensions:

  build-depends:
    base       ^>=4.17.2.0,
    text       ^>=2.1,
    megaparsec ^>=9.6

  default-language: Haskell2010

executable aoc2023
  import: warnings

  main-is: Main.hs

  other-modules:
    Utils

  -- other-extensions:

  build-depends:
    base ^>=4.17.2.0,
    text ^>=2.1,
    aoc2023

  hs-source-dirs: app

  default-language: Haskell2010

test-suite aoc2023-test
  import: warnings

  -- other-modules:

  -- other-extensions:

  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Main.hs

  build-depends:
    base ^>=4.17.2.0,
    HUnit ^>=1.6,
    aoc2023

  default-language: Haskell2010
